fixed splash on mobile again

--- a/style.css
+++ b/style.css
@@ -1625,7 +1625,7 @@ textarea .form-control {
 	}
 	
 	#splash-logo{
-		margin-top: 30px;
+		margin-top: 15px;
 	}
 	
 	#splash-title{
